--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "mongodb": "^3.0.1",
     "mongoose": "^4.13.7",
     "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth20": "^1.0.0",
     "passport-http": "^0.3.0",
     "passport-local": "^1.0.0"
   }
